--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,8 +32,8 @@
 }
 
 
-$header-bg-color: #CF8BF3;
-$header-bg-color-secondary: #BEFCFF;
+$header-bg-color: #E96443;
+$header-bg-color-secondary: #904E95;
 $section-headings-color: #960099;
 
 $section-headings-color: #960099 !default;
