--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,11 +32,11 @@
 }
 
 
-$header-bg-color: #E96443;
-$header-bg-color-secondary: #904E95;
-$section-headings-color: #960099;
+$header-bg-color: #0F0C29;
+$header-bg-color-secondary: #24243E;
+$section-headings-color: #24243E;
 
-$section-headings-color: #960099 !default;
+$section-headings-color: #24243E !default;
 $body-text-color: #606c71 !default;
 $body-link-color: #0AB9DC !default;
 $blockquote-text-color: #819198 !default;
