--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <img class="profile" src="https://merrickmath.github.io/Merrickmath.github.io-PumpkinBomb/h1.png" alt="Picture" width="400" />
+      <img class="profile" src="https://merrickmath.github.io/MerrickMath.github.io-PumpkinBomb/h1.png" alt="Picture" width="400" />
       <h1 class="project-name">{{ "Pumpkin BOMB Challenge" | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
